--- a/minimax.ipynb
+++ b/minimax.ipynb
@@ -4,21 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h1>Adversarial Search Algorithm in Game Theory</h1></center>"
+    "# Adversarial Search Algorithm in Game Theory #"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center> <h2> Mimimax Algorithm </h2> </center>"
+    "## Mimimax Algorithm ##"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5 style=\"margin-top:0\">_Prerequest_:</h5>\n",
+    "#### _Prerequest_: ####\n",
     "1. Multiplayers zero-sum (one player wins and others lose) adversarial game\n",
     "2. Players take turns to make move\n",
     "3. Assume opponent plays optimal way\n",
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5 style=\"margin-top:0\">_Description_:</h5>\n",
+    "#### _Description_: ####\n",
     "- Each possible move will generate a successor state, and player will choose the move that will lead to the state with highest score.\n",
     "- There will be two kinds of layers, MAX layer and MIN layer\n",
     "- MAX layer gets the maximum value of its children\n",
@@ -42,15 +42,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5 style=\"margin-top:0\">_Example_:</h5>\n",
-    "![image info](https://media.geeksforgeeks.org/wp-content/uploads/minmax.png)"
+    "#### _Example_: ####\n",
+    "![image info](./minimax.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5 style=\"margin-top:0\">_Complexity_:</h5>\n",
+    "#### _Complexity_: ####\n",
     "    _Assmue each node has b successors and depth is d_\n",
     "    \n",
     "    O(bˣbˣbˣ...ˣb) = O(b^d)"
@@ -251,14 +251,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h2> Alpha-Beta Pruning (Optimation Method of Minimax) </h2></center>"
+    "## Alpha-Beta Pruning (Optimation Method of Minimax) ##"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5 style=\"margin-top:0\">_Desciption_:</h5>\n",
+    "#### _Desciption_: ####\n",
     "    - There will be two variables storing evaluated max and min values, which are ⍺ and β respectively\n",
     "    - Initial value of ⍺ is -∞, and initial value of β is ∞\n",
     "    - MAX layer only update ⍺\n",
@@ -270,8 +270,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5 style=\"margin-top:0\">_Example_:</h5>\n",
-    "![image info](https://blog-c7ff.kxcdn.com/blog/wp-content/uploads/2017/03/Minimax-algorithm-with-alpha-beta-pruning-for-AI-1.jpg)\n",
+    "#### _Example_: ####\n",
+    "![image info](./alpha-beta.jpg)\n",
     "```\n",
     "Step 1:\n",
     "MAX{                  ⍺ = -∞\n",
@@ -351,13 +351,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5 style=\"margin-top:0\">_Complexity_:</h5>\n",
-    "    _Assmue each node has b successors and depth is d_<br>\n",
-    "    _Worst Case_: No pruning happening, same complexity as minimax<br>\n",
-    "    _Best Case_: First evaluated node is the best node, so that 1 for MAX layer and b for last MIN layer(it is possible to have multiple MIN layers)\n",
-    "    \n",
-    "    O(1ˣbˣ1ˣbˣ...ˣb) = O(b^(d/2))\n",
-    "    \n",
+    "#### _Complexity_: ####\n",
+    "\n",
+    "   _Assmue each node has b successors and depth is d_<br>\n",
+    "   _Worst Case_: No pruning happening, same complexity as minimax<br>\n",
+    "   _Best Case_: First evaluated node is the best node, so that 1 for MAX layer and b for last MIN layer(it is possible to have multiple MIN layers)\n",
+    "   \n",
+    "             O(1ˣbˣ1ˣbˣ...ˣb) = O(b^(d/2))\n",
+    "             \n",
     "    Therefore, within the same amount of time Minimax with alpha-beta pruning could traverse 2 times deeper"
    ]
   },
@@ -422,17 +423,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h2> Expectimax </h2></center>"
+    "## Expectimax ##"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5 style=\"margin-top:0\">_Description_:</h5>\n",
-    "    - MAX layer remains the same\n",
-    "    - MIN layer is replaced by chance nodes, that's to say each possible opponent move is associated with a weight(possibility) and the result is the sum of (weight ˣ score)\n",
-    "    - Minimax almost could be considered as a special case of expectimax that min value has weight of 1.0 and others are 0\n",
+    "#### _Description_: ####\n",
+    "   - MAX layer remains the same\n",
+    "   - MIN layer is replaced by chance nodes, that's to say each possible opponent move is associated with a weight(possibility) and the result is the sum of (weight ˣ score)\n",
+    "   - Minimax almost could be considered as a special case of expectimax that min value has weight of 1.0 and others are 0\n",
     "```\n",
     "    Solves more realistic problem that result will not be too much biased by the minimum value since weights could be changed according to different kinds of opponents, so we don't need to assume opponent makes the optimal move.\n",
     "```"
@@ -442,8 +443,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5 style=\"margin-top:0\">_Example_:</h5>\n",
-    "![image info](https://media.geeksforgeeks.org/wp-content/uploads/minmax.png)\n",
+    "#### _Example_: ####\n",
+    "![image info](./expectimax.jpg)\n",
     "\n",
     "```\n",
     "MAX{\n",
@@ -513,49 +514,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h2> Optimizations </h2><center>"
+    "## Optimizations ##"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h4>Zobrist Hash</h4></center>"
+    "### Zobrist Hash ###"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5 style=\"margin-top:0\">_Decription_:</h5>\n",
-    "    - Compute the hash of a state"
+    "##### _Decription_: #####\n",
+    "   - Compute the hash of a state"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5 style=\"margin-top:0\">_Steps_:</h5>\n",
-    "    1. Initialize a 3 dimensional table that contains keys for each possible case on board\n",
-    "    2. Start with 0 and do XOR operation for each non empty position on board"
+    "##### _Steps_: #####\n",
+    "   1. Initialize a 3 dimensional table that contains keys for each possible case on board\n",
+    "   2. Start with 0 and do XOR operation for each non empty position on board"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5 style=\"margin-top:0\">_Advantages_:</h5>\n",
-    "    1. When player makes a move, no need to recalculate everything because (A XOR B XOR B = A)\n",
-    "    2. Less hash table collision (Complex mathmatical prove behind this, Skip)\n",
-    "<h5 style=\"margin-top:0\">_Disadvantages_:</h5>\n",
-    "    1. Common drawback of tabulation hash that requires certain amount of memory to store keys "
+    "##### _Advantages_: #####\n",
+    "   1. When player makes a move, no need to recalculate everything because (A XOR B XOR B = A)\n",
+    "   2. Less hash table collision (Complex mathmatical prove behind this, Skip)\n",
+    "   \n",
+    "##### _Disadvantages_: #####\n",
+    "   1. Common drawback of tabulation hash that requires certain amount of memory to store keys "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5 style=\"margin-top:0\">_Example_:</h5>\n",
+    "##### _Example_: #####\n",
     "\n",
     "_Tic-Tac-Toe_:"
    ]
@@ -644,30 +646,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h4> Evaluaton Function </h4></center>"
+    "### Evaluaton Function ###"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5 style=\"margin-top:0\">_Decription_:</h5>\n",
+    "##### _Decription_: #####\n",
     "\n",
-    "    To get value of the state, depending on rules of the game, also there are some learnings about using Reinforcement Learning on evaluation function."
+    "   To get value of the state, depending on rules of the game, also there are some learnings about using Reinforcement Learning on evaluation function."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h2> More Exploration </h2></center>"
+    "## More Exploration ##"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h4>Monte Carlo Simulation</h4></center>"
+    "### Monte Carlo Simulation "
    ]
   },
   {
