--- a/minimax.ipynb
+++ b/minimax.ipynb
@@ -669,14 +669,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Monte Carlo Simulation "
+    "### Monte Carlo Simulation ###"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5 style=\"margin-top:0\">_Example_:</h5>\n",
+    "#### _Example_: ####\n",
     "![img](http://mathfaculty.fullerton.edu/mathews/n2003/montecarlopi/MonteCarloPiMod/Images/MonteCarloPiMod_gr_5.gif)\n",
     "\n",
     "    Sampleing randomly on the square area and will get the result that\n",
@@ -693,7 +693,7 @@
    "metadata": {},
    "source": [
     "======================================================================================================================\n",
-    "<center><h1> Thanks </h1></center>"
+    "# Thanks #"
    ]
   }
  ],
