update monte carlo jpg

--- a/minimax.ipynb
+++ b/minimax.ipynb
@@ -677,7 +677,7 @@
    "metadata": {},
    "source": [
     "#### _Example_: ####\n",
-    "![img](http://mathfaculty.fullerton.edu/mathews/n2003/montecarlopi/MonteCarloPiMod/Images/MonteCarloPiMod_gr_5.gif)\n",
+    "![img](./monte-carlo.jpg)\n",
     "\n",
     "    Sampleing randomly on the square area and will get the result that\n",
     "    \n",
