change multiplayer to 2 player

--- a/minimax.ipynb
+++ b/minimax.ipynb
@@ -18,8 +18,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### _Prerequest_: ####\n",
-    "1. Multiplayers zero-sum (one player wins and others lose) adversarial game\n",
+    "#### _Constraints_: ####\n",
+    "1. 2-player zero-sum (one player wins and the other loses) adversarial game\n",
     "2. Players take turns to make move\n",
     "3. Assume opponent plays optimal way\n",
     "4. Need a score(value) associated with each state (usaully from evaluation funciton)\n",
@@ -51,7 +51,7 @@
    "metadata": {},
    "source": [
     "#### _Complexity_: ####\n",
-    "    _Assmue each node has b successors and depth is d_\n",
+    "   _Assmue on average each node has b successors and depth is d_\n",
     "    \n",
     "    O(bˣbˣbˣ...ˣb) = O(b^d)"
    ]
@@ -564,16 +564,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4473658442111030265\n",
-      "6235174913376703316\n",
-      "4473658442111030265\n"
+      "6420982962949991655\n",
+      "6739028698213430896\n",
+      "6420982962949991655\n"
      ]
     }
    ],
@@ -630,16 +630,24 @@
     "    ['_', 'o', 'o', 'x'],\n",
     "] # updated ((0, 2), (1, 2), (2, 2))\n",
     "\n",
+    "updated_positions = ((0, 2), (1, 2), (2, 2))\n",
+    "\n",
     "# previous hash\n",
     "previous_hash = get_hash(previous_board)\n",
     "print(previous_hash)\n",
     "\n",
     "# updated hash\n",
-    "current_hash = update_hash(board, previous_board, previous_hash, ((0, 2), (1, 2), (2, 2)))\n",
+    "current_hash = update_hash(board, \n",
+    "                           previous_board, \n",
+    "                           previous_hash, \n",
+    "                           updated_positions)\n",
     "print(current_hash)\n",
     "\n",
     "# Should get the same value as previous_hash\n",
-    "print(update_hash(previous_board, board, current_hash, ((0, 2), (1, 2), (2, 2))))"
+    "print(update_hash(previous_board, \n",
+    "                  board, \n",
+    "                  current_hash, \n",
+    "                  updated_positions))"
    ]
   },
   {
@@ -679,10 +687,10 @@
     "#### _Example_: ####\n",
     "![img](./monte-carlo.jpg)\n",
     "\n",
-    "    Sampleing randomly on the square area and will get the result that\n",
+    "    Sampling randomly on the square area and will get the result that\n",
     "    \n",
     "    # of samples in circle\n",
-    "    ---------------------- = π\n",
+    "    ---------------------- ≈ π\n",
     "      # of total samples\n",
     "      \n",
     "    This can also be used in simulating odds for gambling games such as Texas Holdem Poker"
